# lanai-infraestructure

./: Cargo.toml
proto/: inventory.proto
src/: lib.rs
src/common/: decimal_serde.rs  mod.rs
src/cors/: mod.rs
src/messaging/: events.rs  mod.rs
src/middleware/: auth_guard.rs  mod.rs  rate_limit.rs  request_size.rs  security_headers.rs  tenant_context.rs
src/observability/: mod.rs
src/rate_limit/: mod.rs
src/resilience/: mod.rs
src/saga/: mod.rs
src/server/: mod.rs
