[package]
name = "lanai-infrastructure"
version = "0.1.0"
edition = "2021"
description = "Shared Infrastructure Library for Lanai Microservices (Security, Tracing, Error Handling)"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.33"
tokio = { version = "1.32", features = ["full"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-str"] }
async-trait = "0.1"
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp"] }
actix-cors = "0.7"
thiserror = "2.0"

# gRPC
tonic = "0.12"
prost = "0.13"

# Tracing & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-http = "0.27"
tracing-actix-web = "0.7.15"
